adecuation tables
